[project]
name = "rebuild 1-0"
version = "0.1.0"
description = ""
authors = [
    {name = "Joshua"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "rebuild 1"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
